# dtw_dp_localization

./: README.md  dtw.py  experiment_loader.py  fft_analysis.py  filters.py  localizacao.py  main.py  preprocessing.py  pyproject.toml  results.py
scripts/: curvatura.py  fft_analysis.py  filters.py  joelho_bom.py  linear_predictor.py  main.py  main_bak.py  matrix_local.py  method_comparison.py  sintetico.py  test_dtw.py  zero_vitual.py
src/pd_localization/: dtw.py  gcc.py  localizacao.py  main.py  preprocessing.py  results.py  test_signals.py
src/utils/: distances.py
