[project]
name = "dtw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.10",
    "ipython>=9.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyqt5>=5.15.11",
    "scipy>=1.17.1",
]
