[project]
name = "pd_localization"
version = "0.1.0"
description = "Tools for Lozalization of Partial Discharge Ocurrances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.10",
    "ipython>=9.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyqt5>=5.15.11",
    "scipy>=1.17.1",
]

[project.scripts]
my_project = "pd_localization.main:main"


[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pd_localization"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
